@@ -4,7 +4,10 @@ Revision history for berrybrew
         - "berrybrew switch" no longer needs a new cmd window opened for env
           vars to work properly (closes #164) 
         - fix typo in API doc (fixes #163)
-        
+        - added new testing environment variables (set in t\setup_test_env.bat)
+          which set up some test-specific flags to shim the system where
+          necessary
+                  
 1.23    2019-05-26
         - fixed issue in README where some external doc links were pointing to
           the wrong branch (fixes #147)
